joplin/03-joplin-deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin-server
  namespace: joplin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joplin-server
  template:
    metadata:
      labels:
        app: joplin-server
    spec:
      containers:
      - name: joplin
        image: joplin/server:3.5.1
        ports:
        - containerPort: 22300
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            memory: 512Mi
