joplin/04-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: joplin-server
  namespace: joplin
spec:
  type: NodePort
  selector:
    app: joplin-server
  ports:
  - port: 22300
    targetPort: 22300
    nodePort: 32230
