joplin/05-joplin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joplin-ingress
  namespace: joplin
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: joplin.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: joplin-server
                port:
                  number: 22300
